# 03_04MVID

./: .gitignore  CMakeLists.txt  README.md
activities/: ACT01.md  ACT02.md  ACT03.md  ACT04.md  ACT05.md  EJ14.01_debug.fs  FINAL.md  OPT01.md  OPT02.md
cmake/: compiler.cmake  deps_files.cmake  platform.cmake
include/engine/: camera.hpp  geometry.hpp  input.hpp  quad.hpp  shader.hpp  texture.hpp  window.hpp
include/engine/geometry/: cube.hpp  cube_positioned.hpp  cube_wrapped.hpp  geometry.hpp  quad.hpp  sphere.hpp
include/glad/: glad.h
projects/AG01/: main.cpp
projects/AG02/: main.cpp
projects/AG03/: fragment.fs  main.cpp  vertex.vs
projects/AG04/: fragment.fs  main.cpp
projects/AG05/: main.cpp  vertex.vs
projects/AG06/: main.cpp  vertex.vs
projects/AG07/: main.cpp
projects/AG08_01/: blinn.fs  main.cpp
projects/AG08_02/: blinn.fs  main.cpp  phong.vs
projects/EJ02_01/: main.cpp
projects/EJ02_02/: main.cpp
projects/EJ02_03/: main.cpp
projects/EJ02_04/: main.cpp
projects/EJ02_05/: main.cpp
projects/EJ02_06/: main.cpp
projects/EJ03_01/: main.cpp  vertex.vs
projects/EJ03_02/: main.cpp  vertex.vs
projects/EJ03_03/: main.cpp  vertex.vs
projects/EJ03_04/: fragment.fs  interpretacion.txt  main.cpp  vertex.vs
projects/EJ04_01/: fragment.fs  main.cpp  vertex.vs
projects/EJ04_02/: fragment.fs  main.cpp
projects/EJ04_03/: fragment.fs  main.cpp  vertex.vs
projects/EJ04_04/: README.txt  main.cpp
projects/EJ04_05/: README.txt  fragment.fs  main.cpp
projects/EJ05_01/: main.cpp
projects/EJ05_02/: main.cpp
projects/EJ05_03/: fragment.fs  main.cpp  vertex.vs
projects/EJ05_04/: main.cpp  vertex.vs
projects/EJ06_02/: main.cpp
projects/EJ07_01/: blinn.fs  main.cpp  phong.vs
projects/EJ07_03/: light.fs
projects/EJ07_04/: light.vs
projects/EJ07_05/: phong.fs
src/engine/: camera.cpp  quad.cpp  shader.cpp  texture.cpp  window.cpp
src/engine/geometry/: cube.cpp  cube_wrapped.cpp  geometry.cpp  quad.cpp  sphere.cpp
